--- a/public/css/index.css
+++ b/public/css/index.css
@@ -34,6 +34,11 @@ li {
 	text-align: right;
 }
 
+#topicsAll li {
+	border-bottom: 1px dashed black;
+	padding: 1em;
+}
+
 #cardlink {
 	text-decoration: none;
 	color: black;
