--- a/public/css/user.css
+++ b/public/css/user.css
@@ -6,3 +6,12 @@
 	color: white;
 	opacity: 0.5;
 }
+
+#indexList li{
+	font-size: 20px;
+	padding: 1em;
+}
+
+#message {
+	border-bottom: 1px dashed black;
+}
